--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
 https://accounts.google.com/gsi/client; frame-src
 https://accounts.google.com/gsi/; connect-src
 https://accounts.google.com/gsi/; />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Image of the Day</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
